[package]
name = "cron_trigger"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
chrono = "0.4.19"
cron = "0.5.0"
lettre = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
clap = "3.0"
reqwest = { version = "0.11", features = ["blocking"] }